--- a/pages/18878.html
+++ b/pages/18878.html
@@ -548,6 +548,8 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <em>Stückelberg-Petermann renormalization group</em> (<a href='#StiecelbergPetermann53'>Stückelberg-Petermann 53</a>) is the incarnation of the <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> <a class='existingWikiWord' href='/nlab/show/group'>group</a> in the perspective of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>: It is a group if formal deformation of <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian densities</a> which is such that any two choices of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalized</a> perturbative <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrices</a> differ by precomposition with a unique group element. This is the statement of the <a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a>.</p>
 
+<p>A priori the Stückelberg-Petermann renormalization group is not related to <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale transformation</a> as in the Wilsonian picture of <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective field theories</a>, but a relation exists (<a href='#GellMannLow54'>Gell-Mann &amp; Low 54</a>) see <a href='#Duetsch18'>Dütsch 18, section 3.5.3</a></p>
+
 <h2 id='related_cocepts'>Related cocepts</h2>
 
 <ul>
@@ -562,10 +564,16 @@ margin-left: 0em;
 <li id='StueckelbergPetermann53'><a class='existingWikiWord' href='/nlab/show/Ernst+St%C3%BCckelberg'>Ernst Stückelberg</a> and A. Petermann, <em>La normalisation des constantes dans la theorie des quanta</em>, Helv. Phys. Acta 26 (1953), 499–520</li>
 </ul>
 
+<p>The relation to <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale transformation</a> is due to</p>
+
+<ul>
+<li id='GellMannLow54'><a class='existingWikiWord' href='/nlab/show/Murray+Gell-Mann'>Murray Gell-Mann</a> and F. E. Low, <em>Quantum Electrodynamics at Small Distances-, Phys. Rev. 95 (5) (1954), 1300–1312</em></li>
+</ul>
+
 <p>Review includes</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, section 3.5.1 of <em>From classical field theory to perturbative quantum field theory</em></li>
+<li id='Duetsch18'><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, section 3.5.1 of <em>From classical field theory to perturbative quantum field theory</em></li>
 </ul>
 
 <p>
@@ -573,7 +581,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on December 22, 2017 17:58:45 
+  Created on December 22, 2017 18:17:42 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
