--- a/pages/5709.html
+++ b/pages/5709.html
@@ -1062,7 +1062,7 @@ margin-left: 0em;
 
 <p>While fundamental <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> is at some level well described by <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>, a typical <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian</a> used to define such a QFT can reasonably be expected to define only degrees of freedom and interactions that are relevant up to some given <a class='existingWikiWord' href='/nlab/show/energy'>energy</a> scale. In this perspective one speaks of the theory as being the <em>effective quantum field theory</em> of some – possibly known but possibly unspecified – more fundamental theory.</p>
 
-<p>An example (historically the first to be successfully considered) is the <a class='existingWikiWord' href='/nlab/show/Fermi+theory+of+beta+decay'>Fermi theory of beta decay</a> of hadrons: this contains interactions of four <a class='existingWikiWord' href='/nlab/show/fermion'>fermion</a>s at a time, for instance a process in which a <a class='existingWikiWord' href='/nlab/show/neutron'>neutron</a> decays into a collection consisting of a <a class='existingWikiWord' href='/nlab/show/proton'>proton</a>, an <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and a <a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a>. Later it was discovered that, more fundamentally, this is not a single reaction but is composed out of several other interactions that involve exchanges of <a class='existingWikiWord' href='/nlab/show/W-boson'>W-boson</a>s between these four particles. Nevertheless, Fermi’s original <em>effective</em> theory made very precise predictions at energy scales less than 10 <span class='newWikiWord'>MeV<a href='/nlab/new/MeV'>?</a></span>. The reason is that the <math class='maruku-mathml' display='inline' id='mathml_864df2d6cb7ccc3eaa13ef5c22022dc6d8a4b5db_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math>-boson has mass several orders of magnitude higher than that (about 80 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>) and was thus <em>effectively</em> invisible at these low energies.</p>
+<p>An example (historically the first to be successfully considered) is the <a class='existingWikiWord' href='/nlab/show/Fermi+theory+of+beta+decay'>Fermi theory of beta decay</a> of hadrons: this contains interactions of four <a class='existingWikiWord' href='/nlab/show/fermion'>fermion</a>s at a time, for instance a process in which a <a class='existingWikiWord' href='/nlab/show/neutron'>neutron</a> decays into a collection consisting of a <a class='existingWikiWord' href='/nlab/show/proton'>proton</a>, an <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and a <a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a>. Later it was discovered that, more fundamentally, this is not a single reaction but is composed out of several other interactions that involve exchanges of <a class='existingWikiWord' href='/nlab/show/W-boson'>W-boson</a>s between these four particles. Nevertheless, Fermi’s original <em>effective</em> theory made very precise predictions at energy scales less than 10 <span class='newWikiWord'>MeV<a href='/nlab/new/MeV'>?</a></span>. The reason is that the <math class='maruku-mathml' display='inline' id='mathml_5ba6254b1aafb75d7fb9332837eabb83eccf8e1d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math>-boson has mass several orders of magnitude higher than that (about 80 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>) and was thus <em>effectively</em> invisible at these low energies.</p>
 
 <p>The low energy expansion of any unitary, relativistic, <span class='newWikiWord'>crossing symmetric<a href='/nlab/new/crossing+symmetry'>?</a></span> <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> can be described by an effective quantum field theory.</p>
 
@@ -1091,15 +1091,15 @@ margin-left: 0em;
 
 <li>
 <p>writing down a <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_864df2d6cb7ccc3eaa13ef5c22022dc6d8a4b5db_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mi>eff</mi></msub><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>i</mi></munder><msub><mi>c</mi> <mi>i</mi></msub><msub><mi>O</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5ba6254b1aafb75d7fb9332837eabb83eccf8e1d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mi>eff</mi></msub><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>i</mi></munder><msub><mi>c</mi> <mi>i</mi></msub><msub><mi>O</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>
   L_{eff} = \sum_i c_i O_i
 
 </annotation></semantics></math></div>
-<p>that contains <em>all</em> the possible polynomial interaction terms <math class='maruku-mathml' display='inline' id='mathml_864df2d6cb7ccc3eaa13ef5c22022dc6d8a4b5db_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>O</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>O_i</annotation></semantics></math> of these fields scaled by their expected/known energy scale <math class='maruku-mathml' display='inline' id='mathml_864df2d6cb7ccc3eaa13ef5c22022dc6d8a4b5db_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msub><mi>O</mi> <mi>i</mi></msub><mo stretchy='false'>]</mo><mo>=</mo><msub><mi>d</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>[O_i] = d_i</annotation></semantics></math>, up to a maximal energy scale</p>
+<p>that contains <em>all</em> the possible polynomial interaction terms <math class='maruku-mathml' display='inline' id='mathml_5ba6254b1aafb75d7fb9332837eabb83eccf8e1d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>O</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>O_i</annotation></semantics></math> of these fields scaled by their expected/known energy scale <math class='maruku-mathml' display='inline' id='mathml_5ba6254b1aafb75d7fb9332837eabb83eccf8e1d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msub><mi>O</mi> <mi>i</mi></msub><mo stretchy='false'>]</mo><mo>=</mo><msub><mi>d</mi> <mi>i</mi></msub></mrow><annotation encoding='application/x-tex'>[O_i] = d_i</annotation></semantics></math>, up to a maximal energy scale</p>
 
 <p>(this will in general contain lots of direct interaction that in the fundamental theory are really compound interactions)</p>
 
-<p>with <math class='maruku-mathml' display='inline' id='mathml_864df2d6cb7ccc3eaa13ef5c22022dc6d8a4b5db_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>c</mi> <mi>i</mi></msub><mo>∝</mo><mfrac><mn>1</mn><mrow><msup><mi>Λ</mi> <mrow><msub><mi>d</mi> <mi>i</mi></msub><mo>−</mo><mi>dim</mi><mi>X</mi></mrow></msup></mrow></mfrac></mrow><annotation encoding='application/x-tex'>c_i \propto \frac{1}{\Lambda^{d_i - dim X}}</annotation></semantics></math>;</p>
+<p>with <math class='maruku-mathml' display='inline' id='mathml_5ba6254b1aafb75d7fb9332837eabb83eccf8e1d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>c</mi> <mi>i</mi></msub><mo>∝</mo><mfrac><mn>1</mn><mrow><msup><mi>Λ</mi> <mrow><msub><mi>d</mi> <mi>i</mi></msub><mo>−</mo><mi>dim</mi><mi>X</mi></mrow></msup></mrow></mfrac></mrow><annotation encoding='application/x-tex'>c_i \propto \frac{1}{\Lambda^{d_i - dim X}}</annotation></semantics></math>;</p>
 </li>
 
 <li>
@@ -1148,7 +1148,7 @@ margin-left: 0em;
 <p>On <a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a> <a class='existingWikiWord' href='/nlab/show/mass'>masses</a> and the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> as an effective field theory:</p>
 
 <blockquote>
-<p>I also noted at the same time that interactions between a pair of lepton doublets and a pair of scalar doublets can generate a neutrino mass, which is suppressed only by a factor <math class='maruku-mathml' display='inline' id='mathml_864df2d6cb7ccc3eaa13ef5c22022dc6d8a4b5db_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>M^{-1}</annotation></semantics></math>, and that therefore with a reasonable estimate of <math class='maruku-mathml' display='inline' id='mathml_864df2d6cb7ccc3eaa13ef5c22022dc6d8a4b5db_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math> could produce observable neutrino oscillations. The subsequent confirmation of neutrino oscillations lends support to the view of the Standard Model as an effective field theory, with M somewhere in the neighborhood of <math class='maruku-mathml' display='inline' id='mathml_864df2d6cb7ccc3eaa13ef5c22022dc6d8a4b5db_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>16</mn></msup><mi>GeV</mi></mrow><annotation encoding='application/x-tex'>10^{16} GeV</annotation></semantics></math>. (<a href='#Weinberg09'>Weinberg 09, p. 15</a>)</p>
+<p>I also noted at the same time that interactions between a pair of lepton doublets and a pair of scalar doublets can generate a neutrino mass, which is suppressed only by a factor <math class='maruku-mathml' display='inline' id='mathml_5ba6254b1aafb75d7fb9332837eabb83eccf8e1d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>M^{-1}</annotation></semantics></math>, and that therefore with a reasonable estimate of <math class='maruku-mathml' display='inline' id='mathml_5ba6254b1aafb75d7fb9332837eabb83eccf8e1d_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math> could produce observable neutrino oscillations. The subsequent confirmation of neutrino oscillations lends support to the view of the Standard Model as an effective field theory, with M somewhere in the neighborhood of <math class='maruku-mathml' display='inline' id='mathml_5ba6254b1aafb75d7fb9332837eabb83eccf8e1d_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>16</mn></msup><mi>GeV</mi></mrow><annotation encoding='application/x-tex'>10^{16} GeV</annotation></semantics></math>. (<a href='#Weinberg09'>Weinberg 09, p. 15</a>)</p>
 </blockquote>
 
 <h3 id='StringTheoryAndGravityCoupledToGaugeTheory'>String theory and gravity coupled to gauge theory</h3>
@@ -1169,6 +1169,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
 <p><a href='string+theory+FAQ#RelationshipBetweenQuantumFieldTheoryAndStringTheory'>string theory FAQ – What is the relationship between quantum field theory and string theory?</a></p>
 </li>
 </ul>
@@ -1181,7 +1185,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>L. P. Kadanoff, <em>Scaling laws for Ising models near <math class='maruku-mathml' display='inline' id='mathml_864df2d6cb7ccc3eaa13ef5c22022dc6d8a4b5db_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mi>c</mi></msub></mrow><annotation encoding='application/x-tex'>T_c</annotation></semantics></math></em> , Physica 2 (1966);</p>
+<p>L. P. Kadanoff, <em>Scaling laws for Ising models near <math class='maruku-mathml' display='inline' id='mathml_5ba6254b1aafb75d7fb9332837eabb83eccf8e1d_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mi>c</mi></msub></mrow><annotation encoding='application/x-tex'>T_c</annotation></semantics></math></em> , Physica 2 (1966);</p>
 </li>
 
 <li>
@@ -1314,14 +1318,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 14, 2016 05:55:34 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (131.159.67.138)
+  Revised on December 22, 2017 18:18:34 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/effective+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/effective+quantum+field+theory/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/effective+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/effective+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/effective+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/effective+quantum+field+theory/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/effective+quantum+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/effective+quantum+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
