--- a/pages/3734.html
+++ b/pages/3734.html
@@ -548,18 +548,22 @@ margin-left: 0em;
 <li>
 <p>Shilin Yu, <em>Dolbeault dga of a formal neighborhood</em>, <a href='http://arxiv.org/abs/1206.5155'>arxiv/1206.5155</a>; <em>The Dolbeault dga of the formal neighborhood of a diagonal</em>, <a href='http://arxiv.org/abs/1211.1567'>arxiv/1211.1567</a></p>
 </li>
+
+<li>
+<p>Alexander Polishchuk, Junwu Tu. <em>DG-resolutions of NC-smooth thickenings and NC-Fourier-Mukai transforms</em>, <a href='https://arxiv.org/abs/1308.4244'>arXiv/1308.4244</a></p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on April  1, 2015 17:15:26 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.113.30.252)
+  Revised on December 22, 2017 23:42:14 
+  by <span class="newWikiWord">BD<a href="/nlab/new/BD">?</a></span>
+  (73.181.158.69)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Kapranov%27s+noncommutative+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kapranov%27s+noncommutative+geometry/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Kapranov%27s+noncommutative+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kapranov%27s+noncommutative+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Kapranov%27s+noncommutative+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Kapranov%27s+noncommutative+geometry/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Kapranov%27s+noncommutative+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Kapranov%27s+noncommutative+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
