--- a/pages/18878.html
+++ b/pages/18878.html
@@ -546,7 +546,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_cocepts'>Related cocepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <em>Stückelberg-Petermann renormalization group</em> (<a href='#StiecelbergPetermann53'>Stückelberg-Petermann 53</a>) is the incarnation of the <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> <a class='existingWikiWord' href='/nlab/show/group'>group</a> in the perspective of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>: It is a group if formal deformation of <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian densities</a> which is such that any two choices of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalized</a> perturbative <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrices</a> differ by precomposition with a unique group element. This is the statement of the <a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <em>Stückelberg-Petermann renormalization group</em> (<a href='#StiecelbergPetermann53'>Stückelberg-Petermann 53</a>) is the incarnation of the <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a> <a class='existingWikiWord' href='/nlab/show/group'>group</a> in the perspective of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>: It is a group of formal deformation of <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian densities</a> which is such that any two choices of <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalized</a> perturbative <a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrices</a> differ by precomposition with a unique group element. This is the statement of the <a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a>.</p>
 
 <p>A priori the Stückelberg-Petermann renormalization group is not related to <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale transformation</a> as in the Wilsonian picture of <a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective field theories</a>, but a relation exists (<a href='#GellMannLow54'>Gell-Mann &amp; Low 54</a>) see <a href='#Duetsch18'>Dütsch 18, section 3.5.3</a></p>
 
@@ -581,14 +581,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on December 22, 2017 18:17:42 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Revised on December 23, 2017 03:29:43 
+  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
+  (116.250.201.228)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/St%C3%BCckelberg-Petermann+renormalization+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/St%C3%BCckelberg-Petermann+renormalization+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/St%C3%BCckelberg-Petermann+renormalization+group/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/St%C3%BCckelberg-Petermann+renormalization+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/St%C3%BCckelberg-Petermann+renormalization+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
