--- a/pages/10971.html
+++ b/pages/10971.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -551,6 +551,234 @@ margin-left: 0em;
 </li>
 </ul>
 </div>
+
+<h4 id='algebraic_quantum_field_theory'>Algebraic Quantum Field Theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
+
+<h2 id='concepts'>Concepts</h2>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observable</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net of observables</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+locality'>causal locality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Haag-Kastler+axioms'>Haag-Kastler axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wightman+axioms'>Wightman axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+net'>field net</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/conformal+net'>conformal net</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+functional'>microcausal functionals</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a>, <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitude</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+additivity'>causal additivity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>, <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<h3 id='states_and_observables'>States and observables</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
+</li>
+</ul>
+
+<h3 id='operator_algebra'>Operator algebra</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/modular+theory'>modular theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stone-von+Neumann+theorem'>Stone-von Neumann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Haag%27s+theorem'>Haag&#39;s theorem</a></p>
+</li>
+</ul>
+
+<h3 id='local_qft'>Local QFT</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Reeh-Schlieder+theorem'>Reeh-Schlieder theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bisognano-Wichmann+theorem'>Bisognano-Wichmann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/PCT+theorem'>PCT theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spin-statistics+theorem'>spin-statistics theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/DHR+superselection+theory'>DHR superselection theory</a></p>
+</li>
+</ul>
+
+<h3 id='perturbative_qft'>Perturbative QFT</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></li>
+</ul>
+
+<h3 id='euclidean_qft'>Euclidean QFT</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</li>
+</ul>
+</div>
 </div>
 </div>
 
@@ -563,6 +791,8 @@ margin-left: 0em;
 <p>Similarly the <a class='existingWikiWord' href='/nlab/show/exterior+algebra'>exterior algebra</a>/<a class='existingWikiWord' href='/nlab/show/exterior+algebra'>Grassmann algebra</a> is called the <em><a class='existingWikiWord' href='/nlab/show/fermion'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/Fock+space'>Fock space</a></em>.</p>
 
 <p>The process of passing from a given <a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>space of quantum states</a> to its Fock space is also known as (or rather: is part of) what is called <em><a class='existingWikiWord' href='/nlab/show/second+quantization'>second quantization</a></em>.</p>
+
+<p>Fock spaces hence appear as <a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>spaces of quantum states</a> of <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free fields</a> in <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a>. In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> they are still used indirectly in for non-free field theories.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -581,6 +811,14 @@ margin-left: 0em;
 <p>Named after <em><a class='existingWikiWord' href='/nlab/show/Vladimir+Aleksandrovich+Fock'>Vladimir Aleksandrovich Fock</a></em>.</p>
 
 <h3 id='general'>General</h3>
+
+<p>A textbook account with an eye towards <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative algebraic quantum field theory</a> is in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, appendix E of <em><a class='existingWikiWord' href='/nlab/show/From+classical+field+theory+to+perturbative+quantum+field+theory'>From classical field theory to perturbative quantum field theory</a></em></li>
+</ul>
+
+<p>See also</p>
 
 <ul>
 <li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Fock_space'>Fock space</a></em></li>
@@ -611,14 +849,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 16, 2014 10:08:23 
+  Revised on December 23, 2017 12:38:29 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.26.182.36)
+  (85.195.104.171)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fock+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fock+space/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Fock+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fock+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fock+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fock+space/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Fock+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fock+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
