--- a/pages/18880.html
+++ b/pages/18880.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Quantum Gauge Theories -- A True Ghost Story in nLab
+      From classical field theory to perturbative quantum field theory in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Quantum Gauge Theories -- A True Ghost Story
+      From classical field theory to perturbative quantum field theory
   </h1>
 
 
@@ -546,39 +546,31 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>,</p>
 
-<p><em>Quantum Gauge Theories – A True Ghost Story</em>,</p>
+<p><em>From classical field theory to perturbative quantum field theory</em></p>
 
-<p>Wiley 2001</p>
+<p>in preparation</p>
 </li>
 </ul>
 
-<p>which applies <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> to rigorously construct quantum <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> (<a class='existingWikiWord' href='/nlab/show/QCD'>quantum chromodynamics</a> and <a class='existingWikiWord' href='/nlab/show/electroweak+field'>electroweak theory</a>) and <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a> as <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theories</a>.</p>
+<p>which is an introductory textbook on <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> in its mathematically precise formulation known as <em><a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative algebraic quantum field theory</a></em>, based on <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>.</p>
 
-<p>In later editions the title has been changed. The most recent, third edition is</p>
-
-<ul>
-<li><em>Gauge Field Theories: Spin One and Spin Two: 100 Years After General Relativity</em>, <a href='http://store.doverpublications.com/0486805247.html'>Dover</a>, 2016,</li>
-</ul>
-
-<p>with extra chapter 6: <em>Non-geometric general relativity</em>.</p>
-
-<p>The analogous discussion of <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a> in in</p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Springer 1995</li>
-</ul>
+<p>The book amplifies the axiomatization of <a class='existingWikiWord' href='/nlab/show/retarded+product'>retarded products</a> over the (equivalent) <a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered products</a>.</p>
 
 <h2 id='related_textbooks'>Related textbooks</h2>
 
 <ul>
-<li id='Rejzner16'>
-<p><a class='existingWikiWord' href='/nlab/show/Katarzyna+Rejzner'>Katarzyna Rejzner</a>, <em><a class='existingWikiWord' href='/nlab/show/Perturbative+Algebraic+Quantum+Field+Theory'>Perturbative Algebraic Quantum Field Theory</a></em>, Mathematical Physics Studies, Springer 2016 (<a href='https://link.springer.com/book/10.1007%2F978-3-319-25901-7'>web</a>)</p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Springer 1995</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, <em><a class='existingWikiWord' href='/nlab/show/From+classical+field+theory+to+perturbative+quantum+field+theory'>From classical field theory to perturbative quantum field theory</a></em>, 2018</p>
+<p><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, <em><a class='existingWikiWord' href='/nlab/show/Quantum+Gauge+Theories+--+A+True+Ghost+Story'>Quantum Gauge Theories -- A True Ghost Story</a></em>, Wiley 2001</p>
+</li>
+
+<li id='Rejzner16'>
+<p><a class='existingWikiWord' href='/nlab/show/Katarzyna+Rejzner'>Katarzyna Rejzner</a>, <em><a class='existingWikiWord' href='/nlab/show/Perturbative+Algebraic+Quantum+Field+Theory'>Perturbative Algebraic Quantum Field Theory</a></em>, Mathematical Physics Studies, Springer 2016 (<a href='https://link.springer.com/book/10.1007%2F978-3-319-25901-7'>web</a>)</p>
 </li>
 </ul>
 
@@ -586,22 +578,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 23, 2017 12:18:44 
+  Created on December 23, 2017 12:19:48 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (85.195.104.171)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Quantum+Gauge+Theories+--+A+True+Ghost+Story/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/From+classical+field+theory+to+perturbative+quantum+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Quantum+Gauge+Theories+--+A+True+Ghost+Story" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/From+classical+field+theory+to+perturbative+quantum+field+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Quantum+Gauge+Theories+--+A+True+Ghost+Story" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/From+classical+field+theory+to+perturbative+quantum+field+theory" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Quantum+Gauge+Theories+--+A+True+Ghost+Story" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/From+classical+field+theory+to+perturbative+quantum+field+theory" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
