--- a/pages/5055.html
+++ b/pages/5055.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,10 +312,44 @@ margin-left: 0em;
 <li><a href='http://en.wikipedia.org/wiki/Paul_Dirac'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_entries'>Related entries</h2>
+<h2 id='writings'>Writings</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/The+Principles+of+Quantum+Mechanics'>The Principles of Quantum Mechanics</a></li>
+<li id='Dirac78'><a class='existingWikiWord' href='/nlab/show/Paul+Dirac'>Paul Dirac</a>, <em>The mathematical foundations of quantum theory</em>, pages 1-8 in A. R. Marlow (ed.) <em>Mathematical Foundations of Quantum Theory</em>, Ac. Press 1978</li>
+</ul>
+
+<p>On <a class='existingWikiWord' href='/nlab/show/mathematical+physics'>mathematical physics</a>:</p>
+
+<blockquote>
+<p>One should keep the need for a sound mathematical basis dominating one’s search for a new theory. Any physical or philosophical ideas that one has must be adjusted to fit the mathematics. Not the way round.</p>
+
+<p>Too many physicists are inclined to start from some preconceived physical ideas and then to try to develop them and ﬁnd a mathematical scheme that incorporates them. Such a line of attack is unlikely to lead to success. One runs into difficulties and ﬁnds no reasonable way out of them. One ought then to realize that one’s whole line of approach is wrong and to seek a new starting point with a sound mathematical basis.</p>
+
+<p>(<a href='#Dirac78'>Dirac 78</a>)</p>
+</blockquote>
+
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_129f3f26e3d701258bf9d3125ceba1e3f2fcc19e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/The+Principles+of+Quantum+Mechanics'>The Principles of Quantum Mechanics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+operator'>Dirac operator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -329,14 +363,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 23, 2013 17:12:59 
+  Revised on December 23, 2017 17:52:39 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (158.109.1.23)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Paul+Dirac" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Paul+Dirac/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Paul+Dirac" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Paul+Dirac" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Paul+Dirac" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Paul+Dirac/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Paul+Dirac" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Paul+Dirac" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
