--- a/pages/82.html
+++ b/pages/82.html
@@ -892,6 +892,12 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a>, <em>A survey of topos theory</em> (notes for students, 1978) <a href='http://www.math.mq.edu.au/~street/ToposSurvey.pdf'>pdf</a></li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Olivia+Caramello'>Olivia Caramello</a>, <em>Theories, Sites, Toposes</em>, Oxford 2017</li>
+</ul>
+
 <h3 id='course_notes'>Course notes</h3>
 
 <ul>
@@ -917,14 +923,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September  1, 2017 07:00:04 
+  Revised on December 27, 2017 07:22:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.41.135.223)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/sheaf+and+topos+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sheaf+and+topos+theory/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/sheaf+and+topos+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sheaf+and+topos+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/sheaf+and+topos+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sheaf+and+topos+theory/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/sheaf+and+topos+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sheaf+and+topos+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
