--- a/pages/16717.html
+++ b/pages/16717.html
@@ -309,10 +309,16 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='https://en.wikipedia.org/wiki/Raymond_Stora'>Wikipedia entry</a></li>
+<li>
+<p><a href='https://en.wikipedia.org/wiki/Raymond_Stora'>Wikipedia entry</a></p>
+</li>
+
+<li>
+<p>Ph. Blanchard, <a class='existingWikiWord' href='/nlab/show/Jose+Gracia-Bondia'>Jose Gracia-Bondia</a>, S. Lazzarini and I. Todorov, <em>Stora’s legacy: perturbative renormalization</em>, to appear.</p>
+</li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_ddd91191f65e00a6e1124cb7a689601d810fe5f9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_be9d2b3af38c7a39ce08073d6b8012e80c9cb1e0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -328,14 +334,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  8, 2017 16:52:14 
+  Revised on December 27, 2017 07:32:59 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Raymond+Stora" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Raymond+Stora/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Raymond+Stora" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Raymond+Stora" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Raymond+Stora" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Raymond+Stora/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Raymond+Stora" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Raymond+Stora" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
