--- a/pages/18634.html
+++ b/pages/18634.html
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_c9cb75aa230a250cc8780f0f105fa0f18a213c76_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+    <h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_f582f564d11971235376e6e3e79b07722d3c7e8a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -324,7 +324,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>[[Feynman diagram]</p>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a></p>
 </li>
 </ul>
 
@@ -335,14 +335,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 30, 2017 14:53:52 
+  Revised on December 27, 2017 07:32:28 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jose+Gracia-Bondia" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jose+Gracia-Bondia/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Jose+Gracia-Bondia" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jose+Gracia-Bondia" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Jose+Gracia-Bondia" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jose+Gracia-Bondia/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Jose+Gracia-Bondia" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jose+Gracia-Bondia" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
