--- a/pages/9294.html
+++ b/pages/9294.html
@@ -308,7 +308,11 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+    <blockquote>
+<p>not to be confused with <a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner&#39;s theorem</a></p>
+</blockquote>
+
+<div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -1070,7 +1074,7 @@ margin-left: 0em;
 <li id='Wigner39'><a class='existingWikiWord' href='/nlab/show/Eugene+Wigner'>Eugene Wigner</a>, <em>On unitary representations of the inhomogeneous Lorentz group</em>, Annals of Mathematics, 40 (1939) 149–204</li>
 </ul>
 
-<p>The observation that Wigner’s representations <math class='maruku-mathml' display='inline' id='mathml_f0132925292f4a314927362d6b4d9de59ef9eae1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>U</mi> <mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>U_{(-)}</annotation></semantics></math> are those for which all the maps <math class='maruku-mathml' display='inline' id='mathml_f0132925292f4a314927362d6b4d9de59ef9eae1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>↦</mo><mo stretchy='false'>⟨</mo><mi>Φ</mi><mo stretchy='false'>|</mo><msub><mi>U</mi> <mi>g</mi></msub><mi>Ψ</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>g \mapsto \langle \Phi \vert U_g \Psi \rangle</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/measurable+function'>measurable</a> and their correspondence of irreducible unitary representations to <a class='existingWikiWord' href='/nlab/show/induced+representation'>induced representations</a> of irreps of the <a class='existingWikiWord' href='/nlab/show/stabilizer+group'>stabilizer group</a> of a given momentum is (e.g. <a href='#Dragon16'>Dragon 16</a>) due to</p>
+<p>The observation that Wigner’s representations <math class='maruku-mathml' display='inline' id='mathml_6a400253cb81017b90605399b4786eadac88108f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>U</mi> <mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>U_{(-)}</annotation></semantics></math> are those for which all the maps <math class='maruku-mathml' display='inline' id='mathml_6a400253cb81017b90605399b4786eadac88108f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>↦</mo><mo stretchy='false'>⟨</mo><mi>Φ</mi><mo stretchy='false'>|</mo><msub><mi>U</mi> <mi>g</mi></msub><mi>Ψ</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>g \mapsto \langle \Phi \vert U_g \Psi \rangle</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/measurable+function'>measurable</a> and their correspondence of irreducible unitary representations to <a class='existingWikiWord' href='/nlab/show/induced+representation'>induced representations</a> of irreps of the <a class='existingWikiWord' href='/nlab/show/stabilizer+group'>stabilizer group</a> of a given momentum is (e.g. <a href='#Dragon16'>Dragon 16</a>) due to</p>
 
 <ul>
 <li id='Mackey68'><a class='existingWikiWord' href='/nlab/show/George+Mackey'>George Mackey</a>, <em>Induced Representations of Groups and Quantum Mechanics</em>, W. A. Benjamin, New York, 1968</li>
@@ -1100,14 +1104,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 06:13:57 
+  Revised on December 28, 2017 17:36:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wigner+classification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wigner+classification/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Wigner+classification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wigner+classification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wigner+classification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wigner+classification/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Wigner+classification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wigner+classification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
