--- a/pages/4276.html
+++ b/pages/4276.html
@@ -494,6 +494,24 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
+</li>
+</ul>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
 
 <ul>
@@ -618,14 +636,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 28, 2017 10:14:31 
+  Revised on December 28, 2017 17:26:12 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
